CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_BUILD_TYPE "RELEASE")

SET(Python_ADDITIONAL_VERSIONS 2.7)
FIND_PACKAGE( PythonLibs 2.7 REQUIRED )
INCLUDE_DIRECTORIES( ${PYTHON_INCLUDE_DIRS} )

FIND_PACKAGE( Boost 1.55.0 COMPONENTS
   thread
   python
   REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

LIST(APPEND CMAKE_CXX_FLAGS "-std=c++0x -Wno-write-strings")
SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} /opt/Qt5.4/5.4/gcc_64/lib/cmake/Qt5Widgets/Qt5Widgets )
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)
FIND_PACKAGE(Qt5Widgets REQUIRED)

# Append directory
INCLUDE_DIRECTORIES(.)


INCLUDE(wrapper/py/module_core.cmake)
INCLUDE(wrapper/py/module_gui.cmake)

